--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App"/>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
     <PackageReference Include="System.Text.Json" Version="5.0.0-preview.3.20214.6"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.3"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj"/>
